--- a/CS4662 Project.ipynb
+++ b/CS4662 Project.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1ffa2e61",
+   "metadata": {},
+   "source": [
+    "# CS4662 Project: Tabular Playground Series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6687c6e",
+   "metadata": {},
+   "source": [
+    "### Students: Joshua Cabrera, Dearo Yam, Edwin Tran"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "fac1e14b",
